# viking-bio-matter

./: .editorconfig  .gitignore  .gitmodules  ADDITIONAL_REFACTORING.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_tests.txt  CODEBASE_REVIEW_FINDINGS.md  CODE_QUALITY_FINDINGS.md  CONTRIBUTING.md  FUTURE_IMPROVEMENTS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION.md  LICENSE  LITTLEFS_INTEGRATION_SUMMARY.md  PRODUCTION_README.md  README.md  REFACTORING_SUMMARY.md  REVIEW_SUMMARY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_NOTES.md  pico_sdk_import.cmake  run.sh  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-firmware.yml
build_stub/host_bridge/: host_bridge
build_tests/: CTestTestfile.cmake  test_tlv
build_tests/Testing/Temporary/: CTestCostData.txt
build_tests/codec/: CTestTestfile.cmake
docs/: ATT_CASE_IMPLEMENTATION.md  BLE_COMMISSIONING_SUMMARY.md  DNS_SD_IMPLEMENTATION.md  MINIMAL_MATTER_ARCHITECTURE.md  MULTICORE_ARCHITECTURE.md  PR_ROADMAP.md  REFERENCE_IMPLEMENTATIONS.md  SUBSCRIPTIONS_TESTING.md  WIFI_COMMISSIONING_SUMMARY.md  phase4-interaction-model.md  phase5-subscriptions-summary.md
docs/phases/: PHASE_1_TLV_CODEC.md  PHASE_2_MESSAGE_TRANSPORT.md
docs/tests/: ATT_TEST.md
examples/: README.md  run_bridge.sh  run_host_bridge.sh  viking_bio_simulator.py
host/: CMakeLists.txt  attestation_verifier.c
host_bridge/: CMakeLists.txt  README.md  host_bridge.service  main.cpp  matter_bridge.cpp  matter_bridge.h  viking_bio_protocol.h  viking_bio_protocol_linux.c
include/: matter_bridge.h  multicore_coordinator.h  serial_handler.h  version.h  viking_bio_protocol.h
platform/pico_w_chip_port/: CHIPDevicePlatformConfig.h  CMakeLists.txt  MATTER_ATTRIBUTES_README.md  MATTER_NETWORK_TRANSPORT_README.md  README.md  ble_adapter.cpp  ble_adapter.h  btstack_tlv_littlefs.cpp  btstack_tlv_littlefs.h  crypto_adapter.cpp  matter_attributes.cpp  matter_attributes.h  matter_network_subscriber.cpp  matter_network_subscriber.h  matter_network_transport.cpp  matter_network_transport.h  matter_reporter.cpp  matter_reporter.h  network_adapter.cpp  network_adapter.h  platform_manager.cpp  platform_manager.h  storage_adapter.cpp  storage_attestation.c
platform/pico_w_chip_port/config/: btstack_config.h  lwipopts.h  mbedtls_config.h
src/: main.c  matter_bridge.c  matter_bridge.cpp  multicore_coordinator.c  serial_handler.c  version.c  viking_bio_protocol.c
src/matter_minimal/: CMakeLists.txt  matter_protocol.c  matter_protocol.h
src/matter_minimal/clusters/: CMakeLists.txt  basic.c  basic.h  descriptor.c  descriptor.h  diagnostics.c  diagnostics.h  level_control.c  level_control.h  network_commissioning.c  network_commissioning.h  onoff.c  onoff.h  temperature.c  temperature.h
src/matter_minimal/codec/: CMakeLists.txt  message_codec.c  message_codec.h  tlv.c  tlv.h  tlv_types.h
src/matter_minimal/commissioning/: CMakeLists.txt  network_commissioning.c  network_commissioning.h
src/matter_minimal/discovery/: CMakeLists.txt  dns_sd.c  dns_sd.h
src/matter_minimal/interaction/: CMakeLists.txt  interaction_model.h  read_handler.c  read_handler.h  report_generator.c  report_generator.h  subscribe_handler.c  subscribe_handler.h  subscription_bridge.cpp  subscription_bridge.h
src/matter_minimal/security/: CMakeLists.txt  attestation.c  attestation.h  case.c  case.h  certificate_store.c  certificate_store.h  pase.c  pase.h  session_mgr.c  session_mgr.h
src/matter_minimal/transport/: CMakeLists.txt  udp_transport.c  udp_transport.h
tests/clusters/: CMakeLists.txt  test_clusters.c
tests/codec/: CMakeLists.txt  test_tlv.c
tests/interaction/: CMakeLists.txt  test_read_handler.c  test_report_generator.c  test_subscribe_handler.c
tests/security/: CMakeLists.txt  test_pase.c  test_session_mgr.c
tests/storage/: CMakeLists.txt  README.md  test_storage_adapter.cpp
tests/transport/: CMakeLists.txt  test_message_codec.c  test_udp_transport.c
tools/: README.md  derive_pin.py  provision_attestation.py  requirements.txt
